fix: changed name back and fixed misalignment

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -117,7 +117,7 @@
   width: 100%;
 }
 
-.projects-button {
+.projects-primary-button {
   margin-left: 0;
   padding: 3px 8px;
 }
